Bug 7424 - zd1211rw multicast support
Summary: zd1211rw multicast support
Status: CLOSED PATCH_ALREADY_AVAILABLE
Alias: None
Product: Networking
Classification: Unclassified
Component: Wireless (show other bugs)
Hardware: i386 Linux
: P2 normal
Assignee: Ulrich Kunitz
URL:
Keywords:
Depends on:
Blocks: 7425
  Show dependency tree
 
Reported: 2006-10-26 13:43 UTC by Benoit PAPILLAULT
Modified: 2006-11-27 14:23 UTC (History)
1 user (show)

See Also:
Kernel Version: 2.6.18
Subsystem:
Regression: ---
Bisected commit-id:


Attachments
Patch for multicast support (6.70 KB, patch)
2006-11-26 06:58 UTC, Ulrich Kunitz
Details | Diff

Description Benoit PAPILLAULT 2006-10-26 13:43:47 UTC
Most recent kernel where this bug did not occur: 2.6.18
Distribution: Debian
Hardware Environment: amd64
Software Environment: GNOME
Problem Description: zd1211rw driver does not support multicast

Steps to reproduce:
1. Run a vlc server sending a video to 239.255.12.42
2. On a wireless client, run vlc udp://@239.255.12.42
3. Run tcpdump on the wireless client
4. The multicast (ethernet and IP) traffic is not going to the client

This properly works with the zd1211 (from http://zd1211.ath.cx) revision 83 driver.
Comment 1 Daniel Drake 2006-10-26 14:27:08 UTC
Is this with an encrypted network?
Comment 2 Benoit PAPILLAULT 2006-10-29 01:44:03 UTC
This is using an open AP (linksys based and other AP as well).
Comment 3 Daniel Drake 2006-11-19 13:08:22 UTC
I think both of my routers aren't doing multicasting. With the vendor driver
(and ipw3945) I tried "ping -b 192.168.0.255" and got no response.

I dumped the frames at the driver level being sent from both vendor driver and
zd1211rw and they matched, including ctrlset. Have not tested whether the frame
is "hitting the air".
Comment 4 Daniel Drake 2006-11-21 20:13:27 UTC
My routers aren't responding to broadcast pings, but I did "echo 0 >
/proc/sys/net/ipv4/icmp_echo_ignore_broadcasts" on another box on the network
and then that one starts responding. This is with a zd1211b.

Do you have other wireless hardware available? Next step would be to put another
device in monitor mode, and use wireshark to see whether the zd1211's broadcast
packets are actually hitting the air.
Comment 5 Benoit PAPILLAULT 2006-11-22 12:22:26 UTC
Problem is not sending multicast packets (multicast packets are sent like normal
data packets), problem is receiving multicast packets. I compared the source
code with the vendor driver, the set_multicast_list is not defined in the
zd1211rw. I tried to adapt the source code ... but failed :-(

Benoit
Comment 6 Benoit PAPILLAULT 2006-11-23 13:57:54 UTC
I just send a diff to the mailing list. multicast and ipv6 are now working
properly. Will the patch be applied in some official tree? if so, which one?
The current patch is based on dsd tree.

Benoit
Comment 7 Daniel Drake 2006-11-25 19:32:06 UTC
Reopening until we have a fix in the development tree
Comment 8 Ulrich Kunitz 2006-11-26 06:58:23 UTC
Created attachment 9628 [details]
Patch for multicast support

This patch should fix the multicast behaviour of the driver.
Comment 9 Ulrich Kunitz 2006-11-27 14:17:42 UTC
Benoit Papillaut confirmed today, that the patch from 2006-11-26 fixes the bug. Many thanks to him for 
raising the issue, demonstrating with a patch how to fix the bug and testing my reworked patch again. 
Comment 10 Ulrich Kunitz 2006-11-27 14:19:33 UTC
I had to assign the bug to me, before I could close it.

Note You need to log in before you can comment on or make changes to this bug.